--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
 
   <link rel="stylesheet" href="./css/codemirror.css">
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/themes.css">
 </head>
 
 
