--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
   <!-- End Google Tag Manager (noscript) -->
   
   <header>
-    <div class="bg-[#293CA6] bg-gradient-to-r from-[#293CA6] to-[#3854A6] text-white text-2xl p-4">
-      <!-- Navigation Menu -->
-      <nav class="container mx-auto flex justify-between items-center mb-4">
+    <!-- Sticky Navigation Menu -->
+    <nav class="sticky top-0 z-50 bg-[#293CA6] bg-gradient-to-r from-[#293CA6] to-[#3854A6] text-white shadow-lg">
+      <div class="container mx-auto flex justify-between items-center p-4">
         <a href="/" class="text-xl font-semibold hover:text-blue-200 transition-colors">ES6→ES5</a>
         <div class="flex items-center space-x-6">
           <a href="/" class="hover:text-blue-200 transition-colors inline-flex items-center gap-1">
@@ -208,13 +208,13 @@
             GitHub
           </a>
         </div>
-      </nav>
-      
-      <!-- Header Content -->
-      <div class="text-center">
-        <h1 class="text-3xl font-bold mb-2">ES6 to ES5 Converter</h1>
-        <p class="text-lg opacity-90">Free Online JavaScript Transpiler & Minifier</p>
       </div>
+    </nav>
+    
+    <!-- Header Content (non-sticky) -->
+    <div class="bg-[#293CA6] bg-gradient-to-r from-[#293CA6] to-[#3854A6] text-white text-center py-8">
+      <h1 class="text-3xl font-bold mb-2">ES6 to ES5 Converter</h1>
+      <p class="text-lg opacity-90">Free Online JavaScript Transpiler & Minifier</p>
     </div>
 </header>
 
