fix: improve theme switching reliability and fix reddit theme loading issues

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   </script>
 
   <link rel="stylesheet" href="./css/codemirror.css">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/main.css" id="theme-stylesheet">
   
   <!-- Theme System -->
   <script src="./js/theme-templates.js"></script>
