style: improve theme dropdown with elegant design and better contrast

--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
         </a>
         <div class="theme-selector">
           <select id="themeDropdown" class="theme-select">
-            <option value="main">🎨 Main Design</option>
-            <option value="reddit">✨ Reddit Design</option>
+            <option value="main">Main Design</option>
+            <option value="reddit">Reddit Design</option>
           </select>
         </div>
       </div>
