--- a/index.html
+++ b/index.html
@@ -221,44 +221,13 @@
 
   <main class="Page container mx-auto">
     <!-- Page Title Section -->
-    <div class="text-center py-8 mb-6">
-      <h1 class="text-4xl font-bold mb-3" style="color: var(--text-primary);">ES6 to ES5 Converter</h1>
+    <div class="page-title-section text-center py-4 mb-4">
+      <h1 class="text-4xl font-bold mb-2" style="color: var(--text-primary);">ES6 to ES5 Converter</h1>
       <p class="text-xl text-gray-600">Free Online JavaScript Transpiler & Minifier</p>
     </div>
-    <!-- SEO Content Section -->
-    <article class="mb-8 text-center">
-      <h2 class="text-2xl font-semibold mb-4" style="color: var(--text-primary);">Convert Modern JavaScript to Compatible Code</h2>
-      <p class="max-w-4xl mx-auto mb-6" style="color: var(--text-secondary);">
-        Transform your ES6/ES2015+ JavaScript code to ES5 for maximum browser compatibility. 
-        Our free online tool supports transpilation, minification, and deep minification with 
-        advanced whitespace removal. Perfect for legacy browser support and code optimization.
-      </p>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8 max-w-3xl mx-auto">
-        <div class="feature-card feature-card-green">
-          <h3 class="font-semibold inline-flex items-center gap-2">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path></svg>
-            Transpile
-          </h3>
-          <p class="text-sm">Convert ES6+ to ES5</p>
-        </div>
-        <div class="feature-card feature-card-blue">
-          <h3 class="font-semibold inline-flex items-center gap-2">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 7v10c0 2.21 3.582 4 8 4s8-1.79 8-4V7M4 7c0 2.21 3.582 4 8 4s8-1.79 8-4M4 7c0-2.21 3.582-4 8-4s8 1.79 8 4m0 5c0 2.21-3.582 4-8 4s-8-1.79-8-4"></path></svg>
-            Minify
-          </h3>
-          <p class="text-sm">Reduce file size</p>
-        </div>
-        <div class="feature-card feature-card-purple">
-          <h3 class="font-semibold inline-flex items-center gap-2">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
-            Deep Clean
-          </h3>
-          <p class="text-sm">Ultimate compression</p>
-        </div>
-      </div>
-    </article>
-
-    <section class="converter-section flex" aria-label="JavaScript Code Converter Tool">
+    
+    <!-- Converter Section - Moved to top for immediate visibility -->
+    <section class="converter-section flex mb-8" aria-label="JavaScript Code Converter Tool">
       <div class="flex-1">
         <h4 class="text-2xl mb-2 font-semibold" style="color: var(--text-primary);">ES6/ES2015+ Input Code</h4>
         <div class="code-input">
@@ -348,13 +317,48 @@ class User {
         </div>
       </div>
     </section>
+    
+    <!-- SEO Content Section -->
+    <article class="mb-8 text-center">
+      <h2 class="text-2xl font-semibold mb-4" style="color: var(--text-primary);">Convert Modern JavaScript to Compatible Code</h2>
+      <p class="max-w-4xl mx-auto mb-6" style="color: var(--text-secondary);">
+        Transform your ES6/ES2015+ JavaScript code to ES5 for maximum browser compatibility. 
+        Our free online tool supports transpilation, minification, and deep minification with 
+        advanced whitespace removal. Perfect for legacy browser support and code optimization.
+      </p>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8 max-w-3xl mx-auto">
+        <div class="feature-card feature-card-green">
+          <h3 class="font-semibold inline-flex items-center gap-2">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path></svg>
+            Transpile
+          </h3>
+          <p class="text-sm">Convert ES6+ to ES5</p>
+        </div>
+        <div class="feature-card feature-card-blue">
+          <h3 class="font-semibold inline-flex items-center gap-2">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 7v10c0 2.21 3.582 4 8 4s8-1.79 8-4V7M4 7c0 2.21 3.582 4 8 4s8-1.79 8-4M4 7c0-2.21 3.582-4 8-4s8 1.79 8 4m0 5c0 2.21-3.582 4-8 4s-8-1.79-8-4"></path></svg>
+            Minify
+          </h3>
+          <p class="text-sm">Reduce file size</p>
+        </div>
+        <div class="feature-card feature-card-purple">
+          <h3 class="font-semibold inline-flex items-center gap-2">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
+            Deep Clean
+          </h3>
+          <p class="text-sm">Ultimate compression</p>
+        </div>
+      </div>
+    </article>
   </main>
+  
   <div id="notification" class="hidden">
     <div class="notification-content">
       <p>Processing completed</p>
       <div class="progress-bar"></div>
     </div>
   </div>
+  
   <!-- Additional SEO Content -->
   <section class="seo-section">
     <div class="container mx-auto px-4">
